bug fixes added georgian parser to moment settings export to csv list update button added order button to all tables added error display to all form submits improved error reporting renewal list new translations

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -17,7 +17,24 @@
     "auth": {
       "undefined": "check your network connection",
       "notFound": "User not found",
-      "wrongUsernameOrPassword": "please check your username or password"
+      "wrongUsernameOrPassword": "please check your username or password",
+      "serverError": "server Error! please check connection!"
+    },
+    "bii": {
+      "undefined": "check your network connection",
+      "notFound": "insurance not found"
+    },
+    "tpi": {
+      "undefined": "check your network connection",
+      "notFound": "insurance not found"
+    },
+    "users": {
+      "undefined": "check your network connection",
+      "notFound": "insurance not found"
+    },
+    "vehicle": {
+      "undefined": "check your network connection",
+      "notFound": "insurance not found"
     }
   },
   "authPage": {
@@ -280,7 +297,7 @@
             "owner": "owner",
             "engineNumber": "engine number",
             "chassisNumber": "chassis number",
-            "plateNumber": "plate number",
+            "creationDate": "creation date",
             "actions": "actions"
           },
           "general": {
